@@ -1,4 +1,8 @@
 Sigil v0.3.2 ADD_DATE
+    - InDesign (as of CS5) refuses to list the fonts it embeds in the OPF manifest of the epub 
+    files it exports, even though the epub standard demands it. This causes Sigil to not pick up
+    these fonts when opening such epub files. A workaround has been added that will detect such
+    problematic epubs and then load the font files.
     - worked around a Tidy bug that added blank lines to the start of <pre> and <style> elements
     (issue #655)
     - fixed a rare crash issue when loading epub files
